# blender

./: .gitignore  CMakeLists.txt
build_files/build_environment/: CMakeLists.txt
build_files/build_environment/cmake/: abseil.cmake  boost.cmake  check_compilers.cmake  download.cmake  harvest.cmake  hiprt.cmake  openimagedenoise.cmake  protobuf.cmake  setup_msys2.cmake  shaderc.cmake  versions.cmake
build_files/buildbot/config/: blender_linux.cmake
build_files/cmake/: clang_array_check.py
build_files/cmake/Modules/: FindHIP.cmake
build_files/cmake/config/: blender_full.cmake  blender_lite.cmake  blender_release.cmake  bpy_module.cmake
build_files/cmake/platform/: platform_apple.cmake  platform_unix.cmake  (+1 more)
build_files/package_spec/: build_archive.py
build_files/utils/: make_test.py  make_update.py
doc/python_api/: sphinx_doc_gen.py
intern/ffmpeg/: ffmpeg_compat.h
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_ISystem.hh  GHOST_IWindow.hh  GHOST_Types.h
intern/opensubdiv/: opensubdiv_converter_capi.hh
scripts/modules/: addon_utils.py  bpy_types.py  rna_keymap_ui.py
scripts/templates_py/: operator_modal.py
source/blender/: CMakeLists.txt
source/blender/draw/intern/shaders/: CMakeLists.txt  common_subdiv_custom_data_interp_comp.glsl
source/creator/: CMakeLists.txt  creator.cc  creator_args.cc  creator_signals.cc
tests/python/: CMakeLists.txt  bl_animation_action.py  bl_animation_armature.py  bl_imbuf_save.py  bl_mesh_modifiers.py  bl_pyapi_grease_pencil.py  bl_rigging_symmetrize.py  bl_usd_export_test.py  bl_usd_import_test.py  cycles_render_tests.py  object_conversion.py  operators.py
tools/check_blender_release/: check_static_binaries.py
tools/check_source/: check_unused_defines.py
tools/git/: git_sh1_to_svn_rev.py
tools/utils/: blender_merge_format_changes.py  make_cursor_gui.py
tools/utils_api/: bpy_introspect_ui.py
tools/utils_maintenance/: c_sort_blocks.py  c_struct_clean.py  cmake_sort_filelists.py  make_license.py
(+1490 files in other folders)
